{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 9,
  "lineage": "7e7c01b9-6277-7911-2706-40c6265c577d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "minecraft",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0e5d9c7acc336f1",
            "arn": "arn:aws:ec2:us-east-1:692321740704:instance/i-01823911bd475b166",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-01823911bd475b166",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "cs312-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06b835336103cd72f",
            "private_dns": "ip-10-0-1-161.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.161",
            "public_dns": "ec2-98-82-5-65.compute-1.amazonaws.com",
            "public_ip": "98.82.5.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b64d92b271fac905",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-081f4feec4c134612",
            "tags": {
              "Name": "minecraft-server"
            },
            "tags_all": {
              "Name": "minecraft-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b530c674a50fe67c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.minecraft",
            "aws_subnet.minecraft_public",
            "aws_vpc.minecraft"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "minecraft_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692321740704:internet-gateway/igw-0c456cfa319abc600",
            "id": "igw-0c456cfa319abc600",
            "owner_id": "692321740704",
            "tags": {
              "Name": "minecraft-igw"
            },
            "tags_all": {
              "Name": "minecraft-igw"
            },
            "vpc_id": "vpc-00e1bba81af641446"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.minecraft"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "minecraft_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692321740704:route-table/rtb-02c681a064216bf7e",
            "id": "rtb-02c681a064216bf7e",
            "owner_id": "692321740704",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c456cfa319abc600",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "minecraft-public-rt"
            },
            "tags_all": {
              "Name": "minecraft-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e1bba81af641446"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.minecraft_igw",
            "aws_vpc.minecraft"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "minecraft_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01faa44e6374c2fd0",
            "route_table_id": "rtb-02c681a064216bf7e",
            "subnet_id": "subnet-081f4feec4c134612"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.minecraft_igw",
            "aws_route_table.minecraft_public_rt",
            "aws_subnet.minecraft_public",
            "aws_vpc.minecraft"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "minecraft",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692321740704:security-group/sg-0b530c674a50fe67c",
            "description": "SSH admin access and Minecraft client access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b530c674a50fe67c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Minecraft",
                "from_port": 25565,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 25565
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "minecraft-sg",
            "name_prefix": "",
            "owner_id": "692321740704",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "minecraft-sg"
            },
            "tags_all": {
              "Name": "minecraft-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e1bba81af641446"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.minecraft"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "minecraft_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692321740704:subnet/subnet-081f4feec4c134612",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081f4feec4c134612",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "692321740704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "minecraft-public-subnet"
            },
            "tags_all": {
              "Name": "minecraft-public-subnet"
            },
            "vpc_id": "vpc-00e1bba81af641446"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.minecraft"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "minecraft",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692321740704:vpc/vpc-00e1bba81af641446",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-005e9d730b636247e",
            "default_route_table_id": "rtb-06b8f2656b7ba479d",
            "default_security_group_id": "sg-0db9b2f3bdafc8be1",
            "dhcp_options_id": "dopt-0b41422c559683a71",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00e1bba81af641446",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06b8f2656b7ba479d",
            "owner_id": "692321740704",
            "tags": {
              "Name": "minecraft-vpc"
            },
            "tags_all": {
              "Name": "minecraft-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}